<resources>
    <string name="app_name">WorkHour</string>

    // main page textViews
    <string name="holder_empty">Empty</string>
    <string name="button_text_addData">Add Data</string>
    <string name="button_text_editData">Edit Data</string>


    <string name="textView_pickedDate">Selected Date: </string>
    <string name="textView_WorkedHoursThatDay">Worked hours that day: </string>
    <string name="textView_WorkPlace">Project Name </string>
    <string name="textView_HoursTogetherThatMonth">Worked Hours this month: </string>
    <string name="textView_payCheck">Salary: </string>

    //add data dialog textViews
    <string name="dialog_addDataButton">Add</string>
    <string name="dialog_dismissButton">Cancel</string>

</resources>