<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView_monthYear"
        android:layout_marginTop="10dp"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="MONTH YEAR" />

    <com.github.sundeepk.compactcalendarview.CompactCalendarView
        android:id="@+id/CalendarView_main"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/textView_monthYear"
        app:compactCalendarBackgroundColor="@color/white"
        app:compactCalendarCurrentDayBackgroundColor="#BDBDBD"
        app:compactCalendarCurrentDayTextColor="#FFF"
        app:compactCalendarCurrentDayIndicatorStyle="fill_large_indicator"
        app:compactCalendarCurrentSelectedDayBackgroundColor="@color/purple_200"
        app:compactCalendarCurrentSelectedDayIndicatorStyle="no_fill_large_indicator"
        app:compactCalendarMultiEventIndicatorColor="@color/purple_200"
        app:compactCalendarTargetHeight="250dp"
        app:compactCalendarTextColor="@color/black"
        app:compactCalendarTextSize="12sp" />


    <androidx.cardview.widget.CardView
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/CalendarView_main"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="10dp">


        <LinearLayout
            android:id="@+id/LinearLayout_HolderRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewholder_selectedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_pickedDate" />

                <TextView
                    android:id="@+id/textView_selectedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/holder_empty"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewholder_hoursToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_WorkedHoursThatDay " />

                <TextView
                    android:id="@+id/textView_hoursForThatDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/holder_empty"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewholder_workPlaceName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_WorkPlace" />

                <TextView
                    android:id="@+id/textView_workPlaceName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/holder_empty"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewholder_hoursTogether"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_HoursTogetherThatMonth" />

                <TextView
                    android:id="@+id/textView_hoursTogether"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/holder_empty"
                    android:textStyle="bold" />
            </LinearLayout>




            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/button_addEditData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/LinearLayout_HolderRow"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/purple_700"
                    android:src="@drawable/icon_add" />

                <ImageButton
                    android:id="@+id/button_DeleteData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/LinearLayout_HolderRow"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/purple_700"
                    android:src="@drawable/icon_delete" />

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>




</RelativeLayout>